[workspace]
members = ["tokenizer", "sol2cw"]

[workspace.package]
authors = ["Denis Lavrentev <dehucka98@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
logos = "0.13.0"
sol2cw_tokenizer = { version = "0.0.1", path = "./tokenizer" }
sol2cw = { version = "0.0.1", path = "./sol2cw" }
